# deep-research

./: .claudeignore  .gitignore  CLAUDE.md  README.md  plan.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: pipeline.py  prompts.py
backend/app/agents/tools/: outline.py  retrieval.py  think.py
backend/app/api/: outline.py  ppt.py  research.py  sources.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: outline.py  ppt.py  research.py  source.py
backend/app/services/: embedding.py  ingestion.py  ppt_generator.py  research.py
backend/tests/: test_research_pipeline.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/outline/: OutlinePanel.tsx
frontend/src/components/ppt/: PPTPanel.tsx
frontend/src/components/research/: ResearchPanel.tsx
frontend/src/components/sources/: SourceItem.tsx  SourcePanel.tsx  SourceUploader.tsx
frontend/src/stores/: researchStore.ts  sourceStore.ts
frontend/src/types/: index.ts
